WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212862
REGRESSION (
r262364
): Disney Plus crashes playing videos
https://bugs.webkit.org/show_bug.cgi?id=212862
Summary
REGRESSION (r262364): Disney Plus crashes playing videos
Jer Noble
Reported
2020-06-05 19:53:53 PDT
REGRESSION (
r262364
): Disney Plus crashes playing videos
Attachments
Patch
(2.28 KB, patch)
2020-06-05 19:58 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-06-05 19:54:39 PDT
<
rdar://problem/64044841
>
Jer Noble
Comment 2
2020-06-05 19:58:52 PDT
Created
attachment 401227
[details]
Patch
EWS
Comment 3
2020-06-06 10:37:38 PDT
Committed
r262687
: <
https://trac.webkit.org/changeset/262687
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401227
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug