REGRESSION (r262364): Disney Plus crashes playing videos https://bugs.webkit.org/show_bug.cgi?id=212862 <rdar://problem/64044841>

Reviewed by Eric Carlson.

In r262364, we specified an incorrect number size for CFNumberGetValue, which nevertheless
worked fine in debug builds, but overwrote stack data in release builds, leading to a crash when
the returned pointer was ref()d. The correct size for a FourCharCode is a
kCFNumberSInt32Type, not a kCFNumberLongType.

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:


Canonical link: https://commits.webkit.org/225686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262687 268f45cc-cd09-0410-ab3c-d52691b4dbfc